--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
+@import url("fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
 * {
   margin: 0;
   padding: 0;
